--- a/frontend_react_project/src/components/MainSection/index.css
+++ b/frontend_react_project/src/components/MainSection/index.css
@@ -129,3 +129,33 @@ body {
     align-items: center;
     box-shadow: 0 2px 5px rgba(189, 189, 234, 0.1);
   }
+  #plus-icon {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    position: relative;
+    z-index: 1;
+  }
+  
+  .modal {
+    position: absolute;
+    bottom: 50px; /* Adjust this value to control the distance from the `+` icon */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    padding: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+  }
+  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  
