--- a/frontend_react_project/src/components/Footer/index.css
+++ b/frontend_react_project/src/components/Footer/index.css
@@ -1,16 +1,18 @@
 .footer {
     background-color: #f8f9fa;
-    padding: 5px;
+    padding: 2px;
     text-align: center;
     position: relative;
     bottom: 0;
-    width: 98%;
+    width: auto;
     font-size: 14px;
     color: #6c757d;
     border-top: 1px solid #dee2e6;
     margin-left: 5px;
     border-radius: 8px;
-    height:auto;
+    height:60px;
+    margin-top:85px;
+    margin-bottom: 10px;
   }
   
   .footer a {
