--- a/frontend_react_project/src/components/RightSidebar/index.css
+++ b/frontend_react_project/src/components/RightSidebar/index.css
@@ -1,8 +1,8 @@
 /* Sidebar.css */
  
 .card {
-    height: 70%;
-    width: 300px;
+    height: 50%;
+    width: 80%;
     margin: 10px;
     padding: 15px;
     background-color: #e9ecef;
