--- a/frontend_react_project/src/components/Footer/index.css
+++ b/frontend_react_project/src/components/Footer/index.css
@@ -4,7 +4,7 @@
     text-align: center;
     position: relative;
     bottom: 0;
-    width: auto;
+    width: 80vw;
     font-size: 14px;
     color: #6c757d;
     border-top: 1px solid #dee2e6;
