--- a/frontend_react_project/src/components/MainSection/index.css
+++ b/frontend_react_project/src/components/MainSection/index.css
@@ -17,7 +17,7 @@ body {
     width: 100%; /* Make it take the full width available */
     max-width: 1200px; /* Set a max-width to maintain readability on larger screens */
     padding: 12px;
-    background-color: #000000;
+    background-color: #f7e7e7;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
@@ -92,7 +92,7 @@ body {
   #user-input {
     flex-grow: 1;
     padding: 10px;
-    font-size: 20px;
+    font-size: 15px;
     border: none;
     outline: none;
   }
