--- a/frontend_react_project/src/components/SideBar/index.css
+++ b/frontend_react_project/src/components/SideBar/index.css
@@ -64,7 +64,7 @@
 }
 
 .sidebar-item:hover {
-  background-color: #fb773c;
+  background-color: #b48068;
 }
 
 .nav-item-mobile-link {
@@ -72,7 +72,7 @@
 }
 
 .blue-icon{
-  background-color: #2980b9;
+  background-color: #fb773c;
   border-radius: 5px;
   margin:20px;
 }
@@ -93,7 +93,7 @@
 }
 
 .sidebar-button {
-  background-color: #3498db;
+  background-color: #fb773c;
   color: white;
   border: none;
   border-radius: 5px;
@@ -102,7 +102,7 @@
 }
 
 .sidebar-button:hover {
-  background-color: #fb773c;
+  background-color: #b48068;
 }
 
 .sidebar-toggle-button {
@@ -121,14 +121,15 @@
 
 .sidebar-toggle-button:hover {
   font-size: 25px;
-  background-color: #fb773c;
+  background-color: #b48068;
   color: #3498db;
 }
 
 .logo {
-  width: 60px;
-  height: 50px;
-  color: #fb773c;
+  width: 30px;
+  height: 30px;
+  color: #b48068;
+  border-radius: 100%;
   /* margin-right: 20px; */
 }
 
@@ -137,7 +138,7 @@
   /* margin-right: 20px; */
 }
 
-.gradient-title {
+.gradient-titles {
   font-size: 20px;
   font-weight: bold;
   background: linear-gradient(90deg, #ff7e5f, #feb47b);
@@ -156,8 +157,12 @@
   font-style: normal;
 } */
 
-.gradient-subtitle {
+.gradient-subtitles {
   background: linear-gradient(90deg, #2a91ff, #4557f3);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.title-equity{
+  margin: 30px 0px 0px 10px;
+  font-size: 25px;
 }
